<!--
  ~  UVCCamera
  ~  library and sample to access to UVC web camera on non-rooted Android device
  ~
  ~ Copyright (c) 2014-2017 saki t_saki@serenegiant.com
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~
  ~  All files in the folder are under this Apache License, Version 2.0.
  ~  Files in the libjpeg-turbo, libusb, libuvc, rapidjson folder
  ~  may have a different license, see the respective files.
  -->

<resources>
	<string name="app_name">usbCameraTest8</string>
    <string name="brightness">Brightness</string>
    <string name="Contrast" />
    <string name="contrast">Contrast</string>
    <string name="hue">Hue</string>
    <string name="saturation">Saturation</string>
    <string name="gamma">Gamma</string>
    <string name="sharpness">Sharpness</string>
    <string name="gain">Gain</string>
    <string name="zoom">ZOOM</string>
    <string name="tilt">Tilt</string>
    <string name="white_balance">White Balance</string>
</resources>
